--- a/leptos-csr/Cargo.toml
+++ b/leptos-csr/Cargo.toml
@@ -7,12 +7,13 @@ authors = ["Frans Stefanus Bothma <fstefanusbothma@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-leptos = { version = "0.7", features = ["csr"] }
+leptos = { version = "0.7.8", features = ["csr"] }
 leptos_meta = { version = "0.7" }
 leptos_router = { version = "0.7" }
 console_log = "1"
 log = "0.4"
 console_error_panic_hook = "0.1"
+reactive_stores = "0.1.8"
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
